# ImageEditor

./: CMakeLists.txt  README.md  main.cpp
core/: ImageLoader.cpp
gui/: ImageView.cpp  MainWindow.cpp  MainWindow.h
layer/: EditablePolygon.cpp  LayerItem.cpp  LayerItem.h
samples/: batch.pl
samples/projects/: imageeditor_batch1.json  imageeditor_batch2.json  imageeditor_batch3.json
undo/: AbstractCommand.cpp  AbstractCommand.h  CageWarpCommand.cpp  CageWarpCommand.h  EditablePolygonCommand.cpp  EditablePolygonCommand.h  InvertLayerCommand.h  LassoCutCommand.cpp  LassoCutCommand.h  MirrorLayerCommand.h  MoveLayerCommand.cpp  MoveLayerCommand.h  PaintStrokeCommand.h  PolygonDeletePointCommand.h  PolygonInsertPointCommand.h  PolygonMovePointCommand.h  PolygonReduceCommand.h  PolygonSmoothCommand.h  PolygonTranslateCommand.h  TransformLayerCommand.cpp  TransformLayerCommand.h
util/: ItemDelegate.h
